<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Alwar Rental</string>
    <string name="login">Login</string>
    <string name="enter_mobile_number">Enter Mobile number</string>
    <string name="get_otp">get OTP</string>
    <string name="enter_details_to_create_account">Enter Details to create Account</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="what_are_you_looking_for">What Are you looking for</string>
    <string name="todo">todo</string>
    <string name="TODO">TODO</string>
    <string name="hello_admin_you_have_full_control_for_your_customers">Hello Admin, You have full control for your customers</string>
    <string name="list_of_sellers_in_your_city">List of Sellers in Your city</string>
    <string name="list_of_users_in_your_app">List of Users in your App</string>
    <string name="change_admin_id_and_password">Change Admin ID And Password</string>
    <string name="list_of_request">List of Request</string>
    <string name="list_all_the_properties">List all the properties</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="warningpinview">can not get OTP please restart your application or try again</string>
    <string name="this_is_image_is_for_logo_purpose">this is image is for logo purpose</string>
    <string name="seller">Seller</string>
    <string name="user">User</string>
    <string name="main_user">Main User</string>
    <string name="login_as">Login As</string>
    <string name="enter_user_id_or_email">Enter user ID or email</string>
    <string name="enter_password">Enter password</string>
    <string name="please_sign_in_to_continue">Please Sign in to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_with_email">Login With Email</string>
    <string name="no_description">no description</string>
    <string name="login_with_number">Login With Number</string>
    <string name="please_sign_up_to_continue">Please Sign up to continue</string>
    <string name="enter_user_id">Enter user ID</string>
    <string name="loading">loading…</string>
    <string name="forgotten_password">forgotten password?</string>
    <string name="enter_seller_id">"Enter Seller ID "</string>
    <string name="enter_your_seller_id_or_email">Enter your Seller ID or email</string>
    <string name="account_type_key">account_type</string>
    <string name="become_a_seller">Become A Seller</string>
    <string name="alwar_rajasthan">Alwar , Rajasthan</string>
    <string name="_91_9982917736">+91 9982917736</string>
    <string name="juneja_chirag_020_gmai_com">junejachirag020@gmai.com</string>
    <string name="chirag_juneja">Chirag Juneja</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="mail_us">Mail Us</string>
    <string name="share">share with your friends</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="pick">pick</string>
    <string name="please_fill_all_the_details_correct">Please Fill All The Details Correct</string>
    <string name="submit">Submit</string>
    <string name="reason_of_buying">reason of buying</string>
    <string name="enter_name">Enter name</string>
    <string name="how_many_rooms_you_want">how many rooms you want</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="enter_your_budget">Enter your budget</string>
    <string name="enter_main_user_id_provided">Enter Main User ID provided</string>
    <string name="enter_main_user_password">Enter Main User password</string>
    <string name="yogesh_singh_chouhan">yogesh singh chouhan</string>
    <string name="KEY_USER_ID">userID</string>
    <string name="alwar_rental">Alwar Rental</string>
    <string name="previous_purchase">Previous Purchase</string>
    <string name="property_for_rent">Property For Rent</string>
    <string name="purchase_property">Purchase Property</string>
    <string name="your_requests">Your Requests</string>
    <string name="transaction_history">Transaction History</string>
    <string name="no_transaction_found">No Transaction Found</string>
    <string name="profile">Profile</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="change_password">Change password</string>
    <string name="review">Review</string>
    <string name="save">save</string>
    <string name="app_ver_1_0_0">App ver 1.0.0</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="verify">varify</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="setting">Setting</string>
    <string name="notificatio">Notifications</string>
    <string name="privacy_and_policy">privacy and policy</string>
    <string name="about">About</string>
    <string name="enter_new_password">enter new password</string>
    <string name="chnage">chnage</string>
    <string name="your_request">Your Request</string>
    <string name="for_rent_request">For Rent Request</string>
    <string name="purchase_request">Purchase Request</string>
    <string name="status_still_pending">Status : Still pending</string>
    <string name="status_approved">Status : Approved</string>
    <string name="more">More…</string>
    <string name="use_my_current_location">Choose location from map</string>
    <string name="or_you_can_fill_your_location_from_here">or you can fill your location from here</string>
    <string name="pincode">pincode</string>
    <string name="house_number_or_building_name">house number or building name</string>
    <string name="road_name_area_colony">Road name , area , colony</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="landmark_optional">landmark(Optional)</string>
    <string name="KEY_EMAIL">email</string>
    <string name="KEY_NAME">name</string>
    <string name="KEY_PHONE_NUMBER">number</string>
    <string name="KEY_ADDRESS_USER">address_user</string>
    <string name="google_map_api_key">AIzaSyA6mz0xHnIIh-SSteVt_61ksF1uQyqgXpU</string>
    <string name="done">Done</string>
    <string name="my_posts">My posts</string>
    <string name="my_customers">My Customers</string>
    <string name="post_new_property">Post new property</string>
    <string name="no_post_found">No post Found</string>
    <string name="my_requests">My requests</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">monthly</string>
    <string name="numbhk">numBHK</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="area">area</string>
    <string name="onroad">onRoad</string>
    <string name="street">street</string>
    <string name="village">village</string>
    <string name="background">background</string>
    <string name="withgarden">withGarden</string>
    <string name="without_garden">without garden</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other..</string>
    <string name="purchase_type">purchase Type</string>
    <string name="on_rent">On Rent</string>
    <string name="for_purchase">for purchase</string>
    <string name="NumberOfRooms">Number of rooms</string>
    <string name="cost">Cost</string>
    <string name="phone_number_for_contact">phone number for contact</string>
    <string name="next">NEXT</string>
    <string name="numBHK">NumBHK</string>
    <string name="numRooms">NumRooms</string>
    <string name="contactNumber">ContactNumber</string>
    <string name="address">Address</string>
    <string name="DATE_UPLOAD">DateUpload</string>
    <string name="camera">camera</string>
    <string name="_1_bhk_house">1 BHK House</string>
    <string name="_2020_07_13_03_08_32_am" tools:ignore="TypographyDashes">2020–07-13 03:08:32 AM</string>
    <string name="no_customer_found">No Customer Found</string>
    <string name="no_data_found">No Data Found</string>
    <string name="hari_prasad_varma">Hari prasad varma</string>
    <string name="_25th_aug_2020">25th aug,2020</string>
    <string name="address_70_indra_colony_alwar_rajasthan">Address : 70 indra colony alwar , rajasthan</string>
    <string name="property_type_on_rent_property">property type : on rent property</string>
    <string name="_2_bhk_house">2 BHK House</string>
    <string name="seller_name_chirag_juneja">Seller Name : Chirag juneja</string>
    <string name="number_of_rooms_3">Number of rooms : 3</string>
    <string name="with_background_garden">With background : Garden</string>
    <string name="on_road_area">On road Area</string>
    <string name="cost_5000">Cost:5000</string>
    <string name="programmer_chirag">Programmer Chirag</string>
    <string name="name_chirag_juneja">Name: chirag juneja</string>
    <string name="reason_for_rent_purpose">Reason : For rent purpose</string>
    <string name="location_109_indra_colony_alwar_rajasthan">Location : 109 indra colony , alwar rajasthan</string>
    <string name="budget_5000">Budget : 5000</string>
    <string name="profession_student">Profession : student</string>
    <string name="married_status_single">Married Status : single</string>
    <string name="request_type_on_rent">Request Type : On Rent</string>
    <string name="number_rooms_5">Number Rooms : 5</string>
    <string name="remove">remove</string>
    <string name="accept">Accept</string>
    <string name="buy_property">Buy Property / Take On Rent</string>
    <string name="sell_your_property">Sell Your Property / Give on Rent</string>
    <string name="switchh">Switch</string>
    <string name="interested_properties">Intrested Properties</string>
    <string name="call_us">Call Us</string>
    <string name="continue_as">continue as</string>
</resources>