<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="20sp"
    app:cardElevation="2dp"
    android:background="@drawable/edit_text_style"
    android:id="@+id/card_item"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp"
            android:text="@string/name_chirag_juneja"
            android:fontFamily="@font/montserrat"
            android:id="@+id/Name"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            app:drawableEndCompat="@drawable/ic_baseline_person_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Name"
            android:layout_marginTop="2dp"
            android:id="@+id/reasonItem"
            android:text="@string/reason_for_rent_purpose"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reasonItem"
            android:layout_marginTop="2dp"
            android:id="@+id/locationItem"
            android:drawableEnd="@drawable/ic_location"
            android:text="@string/location_109_indra_colony_alwar_rajasthan"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationItem"
            android:layout_marginTop="2dp"
            android:id="@+id/budget"
            android:drawableEnd="@drawable/ic_money"
            android:text="@string/budget_5000"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget"
            android:layout_marginTop="2dp"
            android:id="@+id/professionItem"
            android:text="@string/profession_student"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professionItem"
            android:layout_marginTop="2dp"
            android:id="@+id/married_status_item"
            android:text="@string/married_status_single"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/married_status_item"
            android:layout_marginTop="2dp"
            android:id="@+id/requestTypeItem"
            android:text="@string/request_type_on_rent"
            android:fontFamily="@font/montserrat"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestTypeItem"
            android:layout_marginTop="2dp"
            android:text="@string/number_rooms_5"
            android:fontFamily="@font/montserrat"
            android:id="@+id/numRoomItem"
            android:textSize="22sp"
            android:textColor="#000"
            android:padding="5dp"
            />


        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:id="@+id/decline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numRoomItem"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_style2"
            android:textColor="#fff"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="20sp"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="10dp"
            android:id="@+id/accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numRoomItem"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_style2"
            android:textColor="#fff"
            android:fontFamily="@font/montserrat"
            android:layout_marginBottom="20sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

