<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/get_current_location_btn"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/use_my_current_location"
            android:textAllCaps="false"
            android:id="@+id/get_current_location_btn1"
            android:textColor="#25CCF7"
            android:drawableEnd="@drawable/ic_geo_locate"
            android:padding="10dp"
            android:background="@drawable/btn_style4"
            />
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="#000"
        android:id="@+id/view1"
        app:layout_constraintTop_toBottomOf="@id/get_current_location_btn"
        android:layout_margin="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_you_can_fill_your_location_from_here"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:id="@+id/text"
        android:fontFamily="@font/baloo_bhai"
        />

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="580dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/text"
    android:layout_marginTop="20sp"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/pincode"
        android:id="@+id/pin_code"
        android:fontFamily="@font/baloo_bhai"
        android:layout_marginTop="20dp"
        android:digits="0123456789"
        android:maxLength="10"
        android:autofillHints=""
        android:inputType="number" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/house_number_or_building_name"
        android:id="@+id/building_info"
        android:fontFamily="@font/baloo_bhai"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="textPostalAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:drawableEnd="@drawable/ic_search_icon"
        android:hint="@string/road_name_area_colony"
        android:id="@+id/road_name_area_colony"
        android:fontFamily="@font/baloo_bhai"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="textPostalAddress" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:drawableEnd="@drawable/ic_search_icon"
        android:hint="@string/city"
        android:id="@+id/city"
        android:fontFamily="@font/baloo_bhai"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="textPostalAddress" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/state"
        android:id="@+id/state"
        android:fontFamily="@font/baloo_bhai"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="textPostalAddress" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/landmark_optional"
        android:id="@+id/landmark"
        android:fontFamily="@font/baloo_bhai"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="text" />


</LinearLayout>

</androidx.core.widget.NestedScrollView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/saveBtn_location"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat"
            android:textColor="#fff"
            android:textStyle="bold"
            android:id="@+id/saveBtn_location1"
            android:textSize="20sp"
            android:drawableEnd="@drawable/forward_arrow"
            android:padding="10dp"
            android:background="@drawable/btn_style3"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>