<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    android:background="@drawable/ic_background3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:contentDescription="@string/todo"
        android:id="@+id/backBtn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="0dp"
        android:src="@drawable/ic_back"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/backBtn_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/setting"
        android:textSize="25sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:fontFamily="@font/baloo_bhai"
        />

<androidx.cardview.widget.CardView
    android:layout_width="340dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="8dp"
    android:layout_height="500dp"
    android:layout_marginTop="20dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_layout_setting"
        android:gravity="center"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="match_parent"
            android:id="@+id/edit_profile_setting"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat"
            android:background="@android:color/transparent"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/forward_arrow2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/change_password_setting"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/change_password"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/forward_arrow2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:id="@+id/sign_out_setting"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/sign_out"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/logout"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/forward_arrow2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/notification_setting"
            android:background="@android:color/transparent"
            android:text="@string/notificatio"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_notifications"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/forward_arrow2"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat"
            android:background="@android:color/transparent"
            android:id="@+id/privacy_policy"
            android:text="@string/privacy_and_policy"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/forward_arrow2"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:id="@+id/about_setting"
            android:drawableStart="@drawable/ic_baseline_announcement_24"
            android:drawableEnd="@drawable/forward_arrow2"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:text="@string/about"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="#000"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:text="@string/become_a_seller"
            android:id="@+id/Become_seller_button_setting"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat"
            android:gravity="start|center_vertical"
            android:drawableStart="@drawable/certified_icon"
            android:drawablePadding="10dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
